--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-767.less
@@ -227,7 +227,7 @@ header{
 		padding-right: 0px;
 	}
 	.header-text{
-		display: none;
+		display: none !important;
 	}
 	.header_top_bar, #block-lang-dropdown-language, #block-menu-menu-header-login{
 
