--- a/docroot/sites/all/themes/hwc_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/responsive-max-992.less
@@ -140,12 +140,21 @@ header{
 				}
 				.header-text:lang(bg),
 				.header-text:lang(el),
+				.header-text:lang(da),
 				.header-text:lang(de),
+				.header-text:lang(et),
 				.header-text:lang(hu),
 				.header-text:lang(mt),
+				.header-text:lang(hr),
+				.header-text:lang(is),
+				.header-text:lang(it),
+				.header-text:lang(lv),
+				.header-text:lang(no),
 				.header-text:lang(pl),
+				.header-text:lang(pt),
+				.header-text:lang(fi),
 				.header-text:lang(ro){
-					font-size: 1em;
+					font-size: 0.9em;
 					padding-left: .5em;
 				}
 				.header_top_bar{
@@ -1006,8 +1015,8 @@ header{
 			}
 		}
 		.block.block-facetapi{
-			padding-top: 0px;
-			padding-bottom: 10px;
+			padding-top: 0;
+			padding-bottom: 0;
 			overflow: hidden;
 			h2{
 			    padding: 8px 15px;
