--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9775,6 +9775,8 @@ body.page-node-253{
 .content-pdf-guide{
 	float: right;
 	margin-top: -25px;
+	/*TO DO when approve the label to the link*/
+	display: none;
 	a{
 		background: url(../images/target-blank-blue.png) no-repeat 100% 4px;
 	    color: #003399;
