--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -457,6 +457,26 @@ select{
 	}
 }
 
+html:lang(de),
+html:lang(el),
+html:lang(es),
+html:lang(fr),
+html:lang(hu),
+html:lang(pl),
+html:lang(pt),
+html:lang(ro)
+{
+	.intro-splash-20{
+		h2{
+			font-size: 1.8em;
+		}
+		.views-row-first > p:nth-child(3){
+			max-width: 525px;
+		}
+	}
+}
+
+
 
 /* Coming Soon */
 
@@ -1333,7 +1353,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	.social-media{
 		padding-left: 2em;
       	h3{
-			color: white;
+			color: #FFFFFF;
 			margin-top: 0;
 			margin-bottom: 20px;
 			font-weight: 400;
@@ -1341,6 +1361,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	      	span{
 				padding-right: 0.7em;
 				padding-left: 5px;
+				a{
+					color: #FFFFFF;
+				}
 	  		}
   		}
   	}
@@ -2026,6 +2049,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 			    padding-top: 0;
 			    padding-bottom: 0;
 			}
+			p{
+				padding-bottom: 30px;
+			}
 		}
 	}
 
@@ -2158,8 +2184,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 
 .content-languages-download{
+	width: 100%;
     color:#003399;
-    padding: 1em;
+    padding: 0.6em;
     background:#daea96;
     float: left;
     border-radius: 5px;
@@ -2185,7 +2212,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 
 
-html:lang(de){
+html:lang(de), html:lang(mt){
 	.content-languages-download{
 		 label{
 		 	font-size: 0.8em;
@@ -2455,6 +2482,14 @@ div.publications-detail-right-column > a.download{
 	}
 	.form-checkboxes{
 		padding-top: 10px;
+	}
+}
+
+html:lang(de){
+	#edit-field-publication-type, #edit-main-tags, #edit-field-msd-priority-area{
+		> div > label{
+			font-size: 1.5rem;
+	  	}
 	}
 }
 
@@ -4546,10 +4581,30 @@ html:lang(de){
 	}
 }
 
-html:lang(de){
+html:lang(bg), 
+html:lang(cs), 
+html:lang(et), 
+html:lang(el), 
+html:lang(de), 
+html:lang(es),
+html:lang(fr), 
+html:lang(hr), 
+html:lang(is), 
+html:lang(lv), 
+html:lang(lt), 
+html:lang(hu), 
+html:lang(nl), 
+html:lang(pl),
+html:lang(pt),
+html:lang(ro),
+html:lang(sk),
+html:lang(sl),
+html:lang(fi),
+html:lang(sv)
+{
 	.how-to-apply{
 		.box{
-			width: 267px;
+			width: 269px;
 		}
 
 		> div.boxes > div:nth-child(1){
@@ -4882,6 +4937,9 @@ html:lang(de){
 					&:hover{
 						background-color: #002266;
 					}
+					span:before{
+						content: none;
+					}
 				}
 			}
 
@@ -5080,10 +5138,6 @@ span.add-to-my-calendar{
 				display: list-item;
 				margin-left: 2em;
 			}
-
-			.field-type-image{
-				display: none;
-			}
 		}
 
 		.field-name-field-organizer{
@@ -5157,6 +5211,18 @@ span.add-to-my-calendar{
 			margin-top: -10px;
     		clear: both;
     		margin-bottom: 20px;
+    		width: 100%;
+		    display: flex;
+		    justify-content: center;
+		    background: none;
+		    label{
+		    	background: url(../images/green-calendar.png) no-repeat 0 1px;
+		    	padding-left: 1.5em;
+		    }
+	 	}
+
+	 	.hwc-share-widget{
+	 		clear: both;
 	 	}
 
 	 	.field-name-field-start-date{
@@ -5314,6 +5380,7 @@ ul[data-sa-theme="basic-green"].ui-menu{
 		    border-bottom-right-radius: 5px;
 		    border-top-left-radius: 0;
 		    border-bottom-left-radius: 0;
+		    min-width: 86px;
     	}
 
     	input[type=checkbox] {
@@ -5397,21 +5464,33 @@ ul[data-sa-theme="basic-green"].ui-menu{
 	}
 }
 
-html:lang(de), html:lang(bg), html:lang(cs), html:lang(da), html:lang(el), html:lang(fr), html:lang(is), html:lang(pl), html:lang(pt), html:lang(ro), html:lang(sk){
+html:lang(bg), html:lang(cs), html:lang(el), html:lang(es), html:lang(fr), html:lang(lt), html:lang(pt), html:lang(sk){
 	#block-osha-newsletter-osha-newsletter-events-subscribe {
-		padding: 1.4em;
-		label{
-			font-size: 0.95rem;
-			a{
-				font-size: 0.95rem;
-			}
+		input[type="text"]{
+			width: 100%;
+		}
+
+		#edit-subscribe-details .form-submit{
+			position: relative;
+			margin-bottom: 1em;
+			border: 1px solid #FFF;
+			border-top-left-radius: 5px;
+    		border-bottom-left-radius: 5px;
 		}
 	}
 }
 
-html:lang(pt){
+
+html:lang(de), html:lang(bg), html:lang(cs), html:lang(da), html:lang(el), html:lang(fr), html:lang(is), html:lang(pl), html:lang(pt), html:lang(ro), html:lang(sk){
 	#block-osha-newsletter-osha-newsletter-events-subscribe {
-		padding: 1.5em;
+		padding: 1.4em;
+		label{
+			font-size: 0.85rem;
+			a{
+				font-size: 0.95rem;
+			}
+		}
+
 	}
 }
 
@@ -7888,6 +7967,15 @@ body.page-tools-and-publications-practical-tools{
 
 }
 
+html:lang(el){
+	body.page-tools-and-publications-practical-tools{
+		.views-exposed-widgets .views-exposed-widget label{
+			font-size: 0.9em !important;
+			padding-top: 5px;
+		}
+	}
+}
+
 /* Practical tools detail */
 .node-type-practical-tool{
 	.field-name-field-type-of-item,
@@ -8536,6 +8624,7 @@ body.video-page{
 
 .vjs-poster {
     background-position: inherit !important;
+    background-size: cover;
 }
 
 /*MDR-3683*/
@@ -8608,6 +8697,23 @@ header.navbar-default.sticky-menu{
 	}
 }
 
+
+html:lang(el),
+html:lang(pl)
+{
+	header.navbar-default.sticky-menu{
+		.campaigns-header{
+			.navbar-header{
+				div.col-xs-12.col-sm-9{
+					.header-text {
+					    max-width: 473px;
+					}
+				}
+			}
+		}
+	}
+}
+
 body.rel1{
 	header.navbar-default .campaigns-header .navbar-header .header-text{
 		max-width: 320px !important;
@@ -8627,7 +8733,7 @@ body.rel1{
 	padding-top: 0!important;
 }
 
-html:lang(es){
+html:lang(es), html:lang(mt){
 	body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text {
 	    max-width: 368px !important;
 	}
@@ -9221,6 +9327,37 @@ body{
 	}
 }
 
+html:lang(es),
+html:lang(is),
+html:lang(it),
+html:lang(nl),
+html:lang(pl),
+html:lang(ro)
+{
+	body{
+		a.more-link, .news-see-more-button, 
+		.view-events-search .views-field-view-node .field-content a, 
+		.views-field-search-api-relevance a{
+		   	background: url(../images/ico-plus-green.png) no-repeat 95% 4px;
+		}
+	}
+}
+
+html:lang(el)
+{
+	body{
+		a.more-link, .news-see-more-button, 
+		.view-events-search .views-field-view-node .field-content a, 
+		.views-field-search-api-relevance a{
+		   	font-size: 1rem !important;
+		   	padding-top: 4px !important;
+   			padding-bottom: 4px !important;
+   			background: url(../images/ico-plus-green.png) no-repeat 96% 5px;
+   			width: 165px;
+		}
+	}
+}
+
 /* See more other style */
 #block-views-publications-slideshow-slidehow .more-link,
 .node-type-priority-area .region-content .block-hwc-priority-areas ul li .more-link {
@@ -9624,4 +9761,26 @@ body.front-page{
 			}
 		}
 	}	
+}
+
+/* PZ - Update your profile */
+body.page-node-253{
+	#block-hwc-partner-hwc-partner-back-to-private-zone{
+		.breadcrumb{
+			padding: 0px 1em 1.5em 0.8em;
+		}
+	}
+}
+
+.content-pdf-guide{
+	float: right;
+	margin-top: -25px;
+	/*TO DO when approve the label to the link*/
+	display: none;
+	a{
+		background: url(../images/target-blank-blue.png) no-repeat 100% 4px;
+	    color: #003399;
+	    padding-right: 1.5em;
+	    font-weight: bold;
+	}
 }
