--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2292,6 +2292,13 @@ span.pages {
   margin-bottom: 2em;
   margin-top: 2em;
 }
+.newsletter-container .field.field-name-field-summary {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+.newsletter-container .field.field-name-field-summary p {
+  margin: 0;
+}
 .publication-see-more-bottom-container {
   bottom: 0;
   position: absolute;
