--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2657,6 +2657,16 @@ span.pages{
 	margin-top: 2em;
 }
 
+.newsletter-container{
+	.field.field-name-field-summary{
+		margin-bottom: 0;
+		margin-top: 0;
+		p{
+			margin: 0;
+		}
+	}
+}
+
 .publication-see-more-bottom-container{
 	bottom: 0;
     position: absolute;
