MHWC-23 - Copyright fields: Caption only field Caption (copy-right)

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -20156,6 +20156,11 @@ blockquote.image-field-caption p {
   color: #000;
   float: left;
 }
+/*Caption news detail*/
+.node-type-news blockquote.image-field-caption p {
+  font-size: 13px;
+  line-height: 16px;
+}
 .view-publication-type .views-row:hover .views-field-field-image a {
   text-decoration: none;
   color: transparent;
