--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -11178,6 +11178,16 @@ blockquote.image-field-caption {
     }
 }
 
+/*Caption news detail*/
+.node-type-news{
+	blockquote.image-field-caption {
+	    p{
+		    font-size: 13px;
+		    line-height: 16px;
+	    }
+	}
+}
+
 .view-publication-type .views-row:hover .views-field-field-image a{
 	text-decoration:none;
 	color:transparent;
