--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -2944,13 +2944,12 @@ article{
 }
 
 .container .field.field-name-body{
-	p{
+	p, li{
 		a{
 			background-color: @color0;
 			color: @color2;
 			font-weight: bold;
 			font-style: normal;
-			border-bottom: 1px solid @color3;
 		}
 	}
 }
